--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch db/data.json --port 5000"
   },
   "dependencies": {
     "framer-motion": "^11.11.1",
+    "http-proxy-middleware": "^3.0.3",
+    "json-server": "^1.0.0-beta.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
